# paddington

./: Cargo.toml  README.md
src/: errors.rs  helper.rs  main.rs  oracle.rs  print.rs  transport.rs
src/crypt/: cradlehelpers.rs  decrypt.rs  detector.rs  forge.rs  mod.rs
