[package]
name = "paddington"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
clap = {version="4.5.53", features=["derive"]}
colored = "3.0.0"
hex = "0.4.3"
regex = "1.12.2"
reqwest = "0.12.25"
serde_json = "1.0.145"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url_encoded_data = "0.6.1"
urlencoding = "2.1.3"
